--- a/electionproject/package.json
+++ b/electionproject/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
@@ -40,6 +41,5 @@
       "last 1 safari version"
     ]
   },
-  
   "proxy": "http://127.0.0.1:8000"
 }
